# yolov10

./: .gitignore  Cargo.toml  README.md  README_zh.md  export_onnx.py  export_to_safetensors.py  pred.py  pyproject.toml  res.txt  yolov10s.txt
examples/: basic.rs  basic_with_labels.rs  candle.rs  last.rs
src/: lib.rs  onnx.rs
src/candle/: backbone.rs  block.rs  conv.rs  head.rs  mod.rs  neck.rs  op.rs  sequential.rs
src/yolov10/: backbone.rs  block.rs  conv.rs  head.rs  mod.rs  neck.rs  op.rs  sequential.rs
testdata/:  yolov10m.txt  test.txt  yolov10b.txt  yolov10b_keys.txt  yolov10l.txt  yolov10n.txt  yolov10s.txt  yolov10s_keys.txt  yolov10x.txt  yolov8s.txt
tests/: common.rs  yolov10b.rs  yolov10l.rs  yolov10m.rs  yolov10n.rs  yolov10s.rs  yolov10x.rs
