[package]
name = "yolov10"
version = "0.2.0"
edition = "2024"
authors = ["kingzcheung <kingzcheung@gmail.com>"]
description = "YOLOv10 object detection implementation in Rust with ONNX Runtime"
license = "Apache-2.0"
repository = "https://github.com/kingzcheung/yolov10"
homepage = "https://github.com/kingzcheung/yolov10"
documentation = "https://docs.rs/yolov10"
readme = "README.md"
keywords = ["yolo", "object-detection", "computer-vision", "onnx", "ai"]
categories = ["computer-vision", "science::robotics", "multimedia::images"]

[dependencies]
ndarray = "0.16.1"
image = "0.25.8"
imageproc = "0.25.0"
ab_glyph = "0.2.31"
candle-nn = {version="^0.9.0", optional = true}
candle-core = {version="^0.9.0", optional = true}
tracing = {version = "^0.1.41",optional = true}

[features]
default = ["candle"]
candle = ["candle-core", "candle-nn","tracing"]
candle-cuda = ["candle-core/cuda", "candle-nn/cuda","tracing"]
onnx = ["ort"]
onnx-coreml = ["ort/coreml"]
onnx-directml = ["ort/directml"]
onnx-tensorrt = ["ort/tensorrt"]
onnx-cuda = ["ort/cuda"]

[target.'cfg(target_os = "macos")'.dependencies.ort]
version = "=2.0.0-rc.10"
features = ["ndarray", "coreml"]
optional = true

[target.'cfg(windows)'.dependencies.ort]
version = "=2.0.0-rc.10"
features = ["ndarray", "directml"]
optional = true

[target.'cfg(target_os = "linux")'.dependencies.ort]
version = "=2.0.0-rc.10"
features = ["ndarray", "cuda",]
optional = true
